<resources>
    <string name="app_name">AnimalStorage</string>
    <string name="breed_desc">Breed:</string>
    <string name="age_desc">Age:</string>
    <string name="name_desc">Name:</string>
    <string name="add_animal_data_fab_desc">Add animal data</string>
    <string name="name_field_hint">Name</string>
    <string name="age_field_hint">Age</string>
    <string name="breed_field_hint">Breed</string>
    <string name="add_btn">Add animal</string>
    <string name="edit_btn">Edit animal</string>
    <string name="empty_name_field_error">Name field is empty</string>
    <string name="empty_age_field_error">Age field is empty</string>
    <string name="incorrect_age_field_error">Age field is incorrect</string>
    <string name="empty_breed_field_error">Breed field is empty</string>
    <string name="database_category_title">Database</string>
    <string name="room_on_switch_key">room_on_switch</string>
    <string name="room_on_switch_summary">Switch on Room database</string>
    <string name="room_on_switch_title">Room</string>
    <string name="sort_category_title">Sort</string>
    <string name="sort_data_switch_key">sort_data_key</string>
    <string name="sort_data_switch_summary">Sorting enable</string>
    <string name="sort_data_switch_title">Sort data</string>
    <string name="sort_list_key">sort_list</string>
    <string name="sort_list_title">Sort By</string>
    <string name="settings_item">Settings</string>
    <string name="name_sort_way">Name</string>
    <string name="breed_sort_way">Breed</string>
    <string name="age_sort_way">Age</string>
    <string name="name_type">NAME</string>
    <string name="age_type">AGE</string>
    <string name="breed_type">BREED</string>

    <string-array name="sort_list">
        <item>@string/name_sort_way</item>
        <item>@string/breed_sort_way</item>
        <item>@string/age_sort_way</item>
    </string-array>

    <string-array name="sort_list_values">
        <item>@string/name_type</item>
        <item>@string/breed_type</item>
        <item>@string/age_type</item>
    </string-array>
</resources>