<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name_field_hint"
        android:hint="@string/name_field_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/age_et"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/age_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:autofillHints="@string/age_field_hint"
        android:hint="@string/age_field_hint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/breed_et"
        app:layout_constraintTop_toBottomOf="@id/name_et" />

    <EditText
        android:id="@+id/breed_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/breed_field_hint"
        android:hint="@string/breed_field_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_et" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breed_et"
        tools:text="@string/add_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>