<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_bg">

    <TextView
        android:id="@+id/name_desc"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_desc"
        app:layout_constraintBottom_toTopOf="@+id/age_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/name_tv"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/name_desc"
        app:layout_constraintStart_toEndOf="@id/name_desc"
        app:layout_constraintTop_toTopOf="@+id/name_desc"
        tools:text="Rex" />

    <TextView
        android:id="@+id/age_desc"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/age_desc"
        app:layout_constraintBottom_toTopOf="@+id/breed_desc"
        app:layout_constraintStart_toStartOf="@+id/name_desc"
        app:layout_constraintTop_toBottomOf="@+id/name_desc" />

    <TextView
        android:id="@+id/age_tv"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/age_desc"
        app:layout_constraintStart_toStartOf="@+id/name_tv"
        app:layout_constraintTop_toTopOf="@+id/age_desc"
        tools:text="3" />


    <TextView
        android:id="@+id/breed_desc"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/breed_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/age_desc"
        app:layout_constraintTop_toBottomOf="@+id/age_desc" />

    <TextView
        android:id="@+id/breed_tv"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/breed_desc"
        app:layout_constraintStart_toStartOf="@+id/age_tv"
        app:layout_constraintTop_toTopOf="@+id/breed_desc"
        tools:text="Dog" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_edit"
        app:layout_constraintBottom_toTopOf="@+id/delete_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_btn"
        app:layout_constraintStart_toStartOf="@+id/edit_btn"
        app:layout_constraintTop_toBottomOf="@+id/edit_btn" />


    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:background="@color/half_black"
        app:layout_constraintBottom_toTopOf="@+id/age_desc"
        app:layout_constraintEnd_toStartOf="@id/edit_btn"
        app:layout_constraintStart_toStartOf="@+id/name_desc"
        app:layout_constraintTop_toBottomOf="@+id/name_desc" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:background="@color/half_black"
        app:layout_constraintBottom_toTopOf="@+id/breed_desc"
        app:layout_constraintEnd_toStartOf="@id/delete_btn"
        app:layout_constraintStart_toStartOf="@+id/age_desc"
        app:layout_constraintTop_toBottomOf="@+id/age_desc" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/half_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_btn"
        app:layout_constraintStart_toStartOf="@id/breed_desc"
        app:layout_constraintTop_toBottomOf="@id/breed_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>